# healpix-tilemap

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: MCP_JUPYTER_INTEGRATION.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: cdp-client.js  datasets.js  paths.js  server.js  smoke.js  viewer-process.js  viewer-url.js
public/datasets/: README.md  index.example.json
python/: pyproject.toml
python/hpxviewer/: __init__.py  export_cli.py  notebook.py  paths.py  selection.py  server.py  ssh.py  tiles.py
scripts/: test-core.js  test-wasm.js
src/: main.js  styles.css
src/core/: healpix-nested.js  manifest.js  morton.js  projection.js  tile-address.js
src/data/: directory-source.js  layer-request.js  tile-cache.js  tile-codec.js  tile-scheduler.js  wasm-decoder.js
src/remote/: viewer-control.js
src/render/: colormap.js  globe-renderer.js  lod.js  net-renderer.js  region-selection.js  tile-visual.js  viewport-footprint.js
src/ui/: app.js  export-image.js
src/wasm/: tile_decode.wat
tools/: download_etopo2022_15s_surface.py  headless_export_image.mjs  make_earth_elevation.py  make_hpx_tiles.py  make_particle_mixing_demo.py  make_particle_tiles.py  make_spectral_noise.py  make_spherical_harmonic_noise.py  make_synthetic.py  make_zarr_tile_demo.py  prefill_zarr_tile_cache.py  quantize_tile_layer.py  register_dataset.py  validate_tiles.py  zarr_tile.py  zarr_tile_common.py
