[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hpxviewer"
version = "0.1.0"
description = "Notebook helpers for the HEALPix tile map viewer."
requires-python = ">=3.11"
dependencies = []
license = "BSD-2-Clause"

[project.optional-dependencies]
notebook = ["ipython"]
array = ["numpy", "zarr>=3"]
analysis = ["numpy", "pandas"]
generators = ["numpy", "zarr>=3", "healpy", "rasterio"]
mpi = ["mpi4py"]
all = ["ipython", "numpy", "zarr>=3", "pandas", "healpy", "rasterio"]

[project.scripts]
hpxviewer-export = "hpxviewer.export_cli:main"

[tool.setuptools.packages.find]
where = ["."]
